# OGE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
include/: camera.h  mesh.h  model.h  scene.h  shader.h
include/glad/: glad.h
sample_program/: CMakeLists.txt  sample_program.cpp
shaders/: diffuse_shader.fs  diffuse_shader.vs  light_shader.fs  light_shader.vs
src/: CMakeLists.txt  camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp
